<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, Test1Activity!</string>
    <string name="app_name">Avatar prototype v0.3</string>
	<string name="control1">1</string>
	<string name="control2">2</string>
	<string name="control3">3</string>
	<string name="control4">4</string>
	<string name="control5">5</string>
	<string name="control6">6</string>
	<string name="control7">7</string>
	<string name="control8">8</string>
	<string name="control9">9</string>
	<string name="TextViewAddressHint">Enter email here</string>
	<string name="btnsendlinktext">Start new session</string>
	<string name="btnresumesessiontext">Resume session</string>
	<string name="btnsettingstext">Robot settings</string>
<!-- 	
	<string name="sendLinkDlgHeader">Enter invite options</string>
	<string name="sendLinkDlgEmail">Enter email</string>
	<string name="sendLinkDlgExpires">Select expiration time, current %d h</string> -->
	<string name="sendingLinkMessage">Sending invite...</string>
	
	<!-- toasts -->
	<string name="toastNoWifi">No wifi connection available. Please enable wifi!</string>
	<string name="toastInviteOk">Invite sent successfully, waiting for commands.</string>
	<string name="toastInviteFail">Invite sending failed with message \r %s</string>
	<string name="toastInviteHz">Unknown server responce. Possibly fail</string>
	<string name="toastInviteServerRefuse">"Server returned %d, try again later"</string>
	<string name="toastInviteFailNoConnection">Invite sending failed with message \r %s</string>
	<!-- worker screen -->
	<string name="btnstartstoptext">Start|stop</string>
	<string name="btncanceltext">Сlose</string>
	
	
	<string name="TextWeakSignal">Weak signal</string>
	<string name="TextNeedCharge">Low battery</string>
	<string name="TextNoTimeLeft">10 min left</string>
	
	
	<!-- ConfigSrvDialog -->
	<string name="configSrvDlgHeader">Robot configuration</string>
	<string name="configSrvDlgServer">Server</string>
	<string name="configSrvDlgServerPort">Server http port:</string>
	<string name="configSrvDlgAudioOutPort">Outgoing audio port:</string>
	<string name="configSrvDlgAudioInPort">Incoming audio port:</string>
	<string name="configSrvDlgVideoOutPort">Video port:</string>
	<string name="configSrvDlgUseGsm">Use Gsm</string>
	<string name="configSrvDlgDirs">Select direction</string>
	<string name="configSrvDlgDirT">Turn</string>
	<string name="configSrvDlgDirF">Forward</string>
	<string name="configSrvDlgDirRF">Right forward</string>
	<string name="configSrvDlgDirR">Right</string>
	<string name="configSrvDlgDirRB">Right Backward</string>
	
	
	<string name="configSrvDlgWheels">Select wheel</string>
	<string name="configSrvDlgWheelFR">Front right</string>
	<string name="configSrvDlgWheelFL">Front left</string>
	<string name="configSrvDlgWheelB">Backward</string>
	
	<string name="configSrvDlgButtonOk">Ok</string>
	<string name="configSrvDlgButtonCancel">Cancel</string>
	
	
	<!--  -->
	<string name="volumeRegulationDlgSetVolume">Set volume:</string>
	<string name="volumeRegulationDlgHeader">Volume regulation</string>
	<string name="connectionLostDialogDesc">Connection lost! Trying to re-estabilish it.</string>
	<string name="connectionLostDialogButton">Close session</string>
	<string name="lowChargeDialogDesc">Our battery is almost charged off! Replace it or insert charger.</string>
	<string name="lowChargeDialogButton">Close</string>
	<string name="pauseDialogDesc">Session paused. No data transferring.</string>
	<string name="pauseDialogButton">Resume</string>
	<string name="remotePauseDialogDesc">Session paused by remote user. No data transferring.</string>
	<string name="remotePauseDialogButton">Close session</string>
	<string name="timeOutDialogDesc">Session time is over!</string>
	<string name="timeOutDialogButton">Start new session</string>
	
	<!-- Address book  -->
	<string name="AddressBookHeader">Recent addresses</string>
	<string name="AddressBookClearButton"><u>Clear</u></string>
	
</resources>