<?xml version="1.0" encoding="utf-8"?>


<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_config_server_root"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:scrollbars="vertical" 
android:scrollbarStyle="insideOverlay">
<LinearLayout 
              android:id="@+id/LL1"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:padding="10dp"
              
              >
	<LinearLayout android:id="@+id/layout_server"
              android:orientation="horizontal"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:paddingTop="10dp"
              android:paddingBottom="10dp"
              >
    	<TextView android:id="@+id/text_server"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="#FFF"
              android:text="@string/configSrvDlgServer"
              
              />
    	<EditText
        	android:id="@+id/editTextServer"
        	android:layout_width="0dip"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:inputType="textEmailAddress" >

        	<requestFocus />
    	</EditText>
	</LinearLayout>
	    
		<LinearLayout android:id="@+id/layout_server_port"
              android:orientation="horizontal"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:paddingTop="10dp"
              android:paddingBottom="10dp"
              >
    	<TextView android:id="@+id/text_server_port"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="#FFF"
              android:text="@string/configSrvDlgServerPort"
              
              />
    	<EditText
        	android:id="@+id/editTextServerPort"
        	android:layout_width="0dip"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:inputType="number"  >


    	</EditText>
	</LinearLayout>
	
	<LinearLayout android:id="@+id/layoutVideoOutPort"
              android:orientation="horizontal"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:paddingTop="10dp"
              android:paddingBottom="10dp"
              >
    	<TextView android:id="@+id/textVideoOutPort"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="#FFF"
              android:text="@string/configSrvDlgVideoOutPort"
              
              />
    	<EditText
        	android:id="@+id/editTextVideoOutPort"
        	android:layout_width="0dip"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:inputType="number"/>
	</LinearLayout>
	<LinearLayout android:id="@+id/layoutAudioOutPort"
              android:orientation="horizontal"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:paddingTop="10dp"
              android:paddingBottom="10dp"
              >
    	<TextView android:id="@+id/textAudioOutPort"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="#FFF"
              android:text="@string/configSrvDlgAudioOutPort"
              
              />
    	<EditText
        	android:id="@+id/editTextAudioOutPort"
        	android:layout_width="0dip"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:inputType="number"/>
	</LinearLayout>		
	
	<LinearLayout android:id="@+id/layoutAudioInPort"
              android:orientation="horizontal"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:paddingTop="10dp"
              android:paddingBottom="10dp"
              >
    	<TextView android:id="@+id/textAudioInPort"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="#FFF"
              android:text="@string/configSrvDlgAudioInPort"
              
              />
    	<EditText
        	android:id="@+id/editTextAudioInPort"
        	android:layout_width="0dip"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:inputType="number"/>
	</LinearLayout>
	<CheckBox android:id="@+id/checkBoxUseGsm" 
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/configSrvDlgUseGsm"  
	/>
	<!-- 
	<LinearLayout android:id="@+id/layoutAngles"
              android:orientation="horizontal"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:paddingTop="10dp"
              android:paddingBottom="10dp"
              >
    	<EditText
        	android:id="@+id/editTextWheel1Angle"
        	android:layout_width="0dip"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:inputType="numberSigned"/>
    	<EditText
        	android:id="@+id/editTextWheel2Angle"
        	android:layout_width="0dip"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:inputType="numberSigned"/>
    	<EditText
        	android:id="@+id/editTextWheel3Angle"
        	android:layout_width="0dip"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:inputType="numberSigned"/> -->
    <!-- 	<Button
		    android:id="@+id/buttonTestWheels"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="test" /> -->
	<!-- </LinearLayout> -->
		<TextView android:id="@+id/textDirectionsHeader"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="#FFF"
              android:text="@string/configSrvDlgDirs"
    />

	   <RadioGroup
        android:id="@+id/radioGroupDest"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:orientation="horizontal" 
        android:checkedButton="@+id/radioT"
        android:gravity="center_vertical"
        >
        <RadioButton
            android:id="@+id/radioT"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="true"
            android:text="@string/configSrvDlgDirT" />
	       
	       
        <RadioButton
            android:id="@+id/radioF"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/configSrvDlgDirF" />

        <RadioButton
            android:id="@+id/radioRF"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/configSrvDlgDirRF" />

        <RadioButton
            android:id="@+id/radioR"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/configSrvDlgDirR" />

        <RadioButton
            android:id="@+id/radioBR"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/configSrvDlgDirRB" />


    </RadioGroup>

	<TextView android:id="@+id/textWheelHeader"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="#FFF"
              android:text="@string/configSrvDlgWheels"
    />
    <RadioGroup
        android:id="@+id/radioGroupWheel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:checkedButton="@+id/radio0" >

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/configSrvDlgWheelFR" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configSrvDlgWheelFL" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configSrvDlgWheelB" />
    </RadioGroup>

    <!-- this field's value is calculating dynamically -->
    <TextView android:id="@+id/textWheelAngle"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="#FFF"
              android:text="0"
    />
    <SeekBar
        android:id="@+id/seekBarAngle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="25dp"
        android:max="180"
        />
		
	<LinearLayout android:id="@+id/layout_buttons"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="10dp"
            >
			<Button
		    android:id="@+id/buttonOk"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/configSrvDlgButtonOk" />
			<Button
		    android:id="@+id/buttonCancel"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/configSrvDlgButtonCancel" />
	</LinearLayout>
 

</LinearLayout>
</ScrollView>